5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1875_2872.log
== TEST (2019-07-02 18:24:10) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
j=0
for i in range(l):
	p=mat[i,:]
	print(p)
	prod=prod+p[0]*p[1]/2
print(range(prod/1,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:26:18) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
j=0
for i in range(l):
	p=mat[i,:]
	print(p)
	prod=prod+p[0]*p[1]/2
print(range(prod/1,2))
	
-- EXECUTION TIME:
0.999638
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2872/main.py", line 12, in <module>
    print(range(prod/1,2))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:28:26) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
j=0
for i in range(l):
	p=mat[i,:]
	prod=prod+(p[0]*p[1])/2
print(range(prod/l,2))
	
-- EXECUTION TIME:
0.952881
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2872/main.py", line 11, in <module>
    print(range(prod/l,2))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:28:33) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
j=0
for i in range(l):
	p=mat[i,:]
	prod=prod+(p[0]*p[1])/2
print(range(prod/l,2))
	
-- EXECUTION TIME:
0.880271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2872/main.py", line 11, in <module>
    print(range(prod/l,2))
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:28:58) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
for i in range(l):
	p=mat[i,:]
	prod=prod+(p[0]*p[1])/2
print(range(prod/l,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:29:12) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
for i in range(l):
	p=mat[i,:]
	prod=prod+(p[0]*p[1])/2
print(range(prod/l,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:29:52) 
-- CODE:
from numpy import* 
from numpy.linalg import*
mat=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
for i in range(l):
	p=mat[i,:]
	prod=prod+(p[0]*p[1])/2
print(round(prod/l,2))
	
-- EXECUTION TIME:
0.945509
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,7.9]]
---- correct output:
21.12
---- user output:
21.12
-- TEST CASE 2:
---- input:
[[5.6,3.0],[2.2,1.1],[6.3,4.4]]
---- correct output:
7.82
---- user output:
7.82
-- TEST CASE 3:
---- input:
[[2,3,4],[3.4,5.5,6]]
---- correct output:
6.18
---- user output:
6.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:51:47) 
-- CODE:
from numpy import* 
from numpy.linalg import*
matriz=array(eval(input("digite a matriz: ")))
l=mat.shape[0]
c=mat.shape[1]
prod=0
for i in range(l):
	d=matriz[i,:]
	prod=prod+(p[0]*p[1])/2
print(round(prod/l,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:52:12) 
-- CODE:
from numpy import* 
from numpy.linalg import*
matriz=array(eval(input("digite a matriz: ")))
l=matriz.shape[0]
c=matriz.shape[1]
prod=0
for i in range(l):
	d=matriz[i,:]
	prod=prod+(p[0]*p[1])/2
print(round(prod/l,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 18:52:31) 
-- CODE:
from numpy import* 
from numpy.linalg import*
matriz=array(eval(input("digite a matriz: ")))
l=matriz.shape[0]
c=matriz.shape[1]
prod=0
for i in range(l):
	d=matriz[i,:]
	prod=prod+(d[0]*d[1])/2
print(round(prod/l,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:52:42) 
-- CODE:
from numpy import* 
from numpy.linalg import*
matriz=array(eval(input("digite a matriz: ")))
l=matriz.shape[0]
c=matriz.shape[1]
prod=0
for i in range(l):
	d=matriz[i,:]
	prod=prod+(d[0]*d[1])/2
print(round(prod/l,2))
	
-- EXECUTION TIME:
1.04328
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,7.9]]
---- correct output:
21.12
---- user output:
21.12
-- TEST CASE 2:
---- input:
[[5.6,3.0],[2.2,1.1],[6.3,4.4]]
---- correct output:
7.82
---- user output:
7.82
-- TEST CASE 3:
---- input:
[[2,3,4],[3.4,5.5,6]]
---- correct output:
6.18
---- user output:
6.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:53:10) 
-- CODE:
from numpy import* 
from numpy.linalg import*
matriz=array(eval(input("digite a matriz: ")))
l=matriz.shape[0]
c=matriz.shape[1]
prod=0
for i in range(l):
	d=matriz[i,:]
	prod=prod+(d[0]*p[1])/2
print(round(prod/l,2))
	
-- EXECUTION TIME:
1.09292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1875/2872/main.py", line 9, in <module>
    prod=prod+(d[0]*p[1])/2
NameError: name 'p' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 18:53:18) 
-- CODE:
from numpy import* 
from numpy.linalg import*
matriz=array(eval(input("digite a matriz: ")))
l=matriz.shape[0]
c=matriz.shape[1]
prod=0
for i in range(l):
	d=matriz[i,:]
	prod=prod+(d[0]*d[1])/2
print(round(prod/l,2))
	
-- EXECUTION TIME:
1.03384
-- TEST CASE 1:
---- input:
[[6.8,8.2],[4.2,1.1],[8.4,7.9]]
---- correct output:
21.12
---- user output:
21.12
-- TEST CASE 2:
---- input:
[[5.6,3.0],[2.2,1.1],[6.3,4.4]]
---- correct output:
7.82
---- user output:
7.82
-- TEST CASE 3:
---- input:
[[2,3,4],[3.4,5.5,6]]
---- correct output:
6.18
---- user output:
6.18
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
